--- a/index.html
+++ b/index.html
@@ -128,7 +128,15 @@
           <div class="card shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dimecres 3</text></svg>
             <div class="card-body">
-              <p class="card-text"><b>Servicis: </b>Batuda</p>
+              <p class="card-text"><b>Matí:</b> Arribar
+                <p><b>Vesprada:</b> no se sabe</p>                
+                <p><b>Nit:</b> no se sabe</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Nit</button>
+                </div>
+                <small class="text-muted">Batuda</small>
+              </div>
             </div>
           </div>
         </div>
