--- a/index.html
+++ b/index.html
@@ -126,20 +126,47 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dimecres 3</text></svg>
+            <div class="card-body">
+              <p class="card-text"><b>Matí:</b> Arribar
+                <p><b>Vesprada:</b>NO se sabe</p>   
+                <p><b>Nit:</b> No se sabe</p>
+                <div class="d-flex justify-content-between align-items-center">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dijous 4</text></svg>
+            <div class="card-body">
+              <p class="card-text"><b>Matí:</b> Act pacte identitat (Jorge, Ferran)
+                <p><b>Vesprada:</b>Conjunta</p>   
+                <p><b>Nit:</b> Act nivell Companyerisme al poder</p>
+                <p><b>Materias:</b> proyector, ordenador, bolis, paper i <a href="https://www.youtube.com/watch?v=IFxNY68Nswc">video</a></p>        
+                <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Matí</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Nit</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Divendres 5</text></svg>
-
             <div class="card-body">
               <p class="card-text"><b>Matí:</b> Conjunta
-                <p><b>Vesprada:</b>Act nivell Coneguem el campament</p>   
-                <p><b>Materias:</b>5 sobres rojos, 5 sobres blaus, 2 horaris campament, fulls i bolis.</p>             
+                <p><b>Vesprada:</b>Act nivell Coneguem el campament</p>
+                <p><b>Materias:</b> 5 sobres rojos, 5 sobres blaus, 2 horaris campament, fulls i bolis</p>        
                 <p><b>Nit:</b> Act nivell Trivial Pixar</p>
-                <p><b>Materias:</b> Tablero trivial, fitxes, dados, preguntes pixar, fotos monitors x2, fulls y bolis</p></p>
-              <div class="d-flex justify-content-between align-items-center">
+                <p><b>Materias:</b> Tablero trivial, fitxes, dados, preguntes pixar, fotos monitors x2, fulls y bolis</p>        
+                <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Nit</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Act Vesprada</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Nit</button>
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
             </div>
           </div>
@@ -162,7 +189,6 @@
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Act Matí</button>
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
             </div>
           </div>
@@ -170,17 +196,15 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dissabte 6</text></svg>
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Diumenge 7</text></svg>
             <div class="card-body">
-              <p class="card-text"><b>Matí:</b> Act pacte identitat (Nosaltres) Cami a la llibertat
-                <p><b>Materias:</b>mapa campament, 6 safes, 4 poals, pintura, paper de vater, farina, colacao, ketchup, 3 platans, gots de plastic, vate de baseball, globos, pilota, presinto, fil da pita, sac de tela.</p>     
-                <p><b>Vesprada:</b>Conjunta</p>   
-                <p><b>Nit:</b> vetlada EV5, EXP</p>
+              <p class="card-text"><b>Matí:</b> Pista Americana
+                <p><b>Vesprada:</b>Missa</p>   
+                <p><b>Nit:</b> vetlada EV 1-2-4</p>
                 <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Matí</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Vesprada</button>
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
             </div>
           </div>
@@ -188,17 +212,108 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dissabte 6</text></svg>
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dilluns 8</text></svg>
             <div class="card-body">
-              <p class="card-text"><b>Matí:</b> Act pacte identitat (Nosaltres) Cami a la llibertat
-                <p><b>Materias:</b>mapa campament, 6 safes, 4 poals, pintura, paper de vater, farina, colacao, ketchup, 3 platans, gots de plastic, vate de baseball, globos, pilota, presinto, fil da pita, sac de tela.</p>     
-                <p><b>Vesprada:</b>Conjunta</p>   
-                <p><b>Nit:</b> vetlada EV5, EXP</p>
+              <p class="card-text"><b>Matí:</b> Act pacte identitat (Lia, Sara)
+                <p><b>Vesprada:</b>Act pacte identitat preparar motixilla bivac</p>   
+                <p><b>Nit:</b> Act pacte identitat relaxació</p>
                 <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Act Matí</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dimarts 9 bivac</text></svg>
+            <div class="card-body">
+              <p class="card-text"><b>Matí:</b> Anar al poble
+                <p><b>Vesprada:</b>piscina</p>   
+                <p><b>Nit:</b> Act Relax</p>
+                <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">Porta balo i cartes</small>
+            </div>
+          </div>
+        </div>
+      </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dimecres 10 EV1</text></svg>
+            <div class="card-body">
+              <p class="card-text"><b>Matí:</b> tornar al campa
+                <p><b>Vesprada:</b>Act nivell EV1</p>   
+                <p><b>Nit:</b> Conjunta</p>
+                <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Vesprada</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dijous 11</text></svg>
+            <div class="card-body">
+              <p class="card-text"><b>Matí:</b> Conjunta
+                <p><b>Vesprada:</b>Conjunta</p>   
+                <p><b>Nit:</b> Conjunta</p>
+                <div class="d-flex justify-content-between align-items-center">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Divendres 12</text></svg>
+            <div class="card-body">
+              <p class="card-text"><b>Matí:</b> Conjunta
+                <p><b>Vesprada:</b>Act pacte ID2 preparar velada</p>   
+                <p><b>Nit:</b> Velada Pacte</p>
+                <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">Servicis</small>
+            </div>
+          </div>
+        </div>
+      </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dissabte 13</text></svg>
+            <div class="card-body">
+              <p class="card-text"><b>Matí:</b> Jui Zorro
+                <p><b>Vesprada:</b>Act nivell Farem futur</p>   
+                <p><b>Nit:</b> Amic Invisible</p>
+                <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Act Vesprada</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dijous 11</text></svg>
+            <div class="card-body">
+              <p class="card-text"><b>Tornar a Casa</b> 
+                <div class="d-flex justify-content-between align-items-center">
+                  <small class="text-muted">Batuda</small>
               </div>
             </div>
           </div>
