--- a/index.html
+++ b/index.html
@@ -315,7 +315,9 @@
             <div class="card shadow-sm">
               <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Dijous 11</text></svg>
               <div class="card-body">
-                <p class="card-text"><b>Tornar a Casa</b> 
+                <p class="card-text"><b>Matí:</b> arreplegar
+                  <p><b>Vesprada:</b>anara al poble que toque</p>   
+                  <p><b>Nit:</b> festa xd</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <small class="text-muted">Batuda</small>
                 </div>
